fixing css overflow

--- a/src/Components/Deck/Deck.css
+++ b/src/Components/Deck/Deck.css
@@ -6,6 +6,8 @@
     min-width: 0;
     overflow-x: hidden;
     overflow-y: auto;
+    padding: 0.75rem;
+    max-width: 100%;
 }
 
 .Deck__title {
@@ -25,10 +27,6 @@
     max-width: 1.75rem;
 }
 
-.Deck {
-    padding: 0.75rem;
-    max-width: 100%;
-}
 .Deck__instance {
     margin-top: 1rem;
     flex: 1 1;
@@ -62,8 +60,7 @@
     width: 100%;
     max-height: 100%;
     text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+    overflow-y: auto;
 }
 .Deck__titleContainer__metaContainer {
     display: flex;
